<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvStateText"
        android:layout_alignBottom="@+id/tvStateText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvStateText"
        android:text = "@string/state"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stateDescr"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/tvProjectChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:text="@string/projDescr" />

    <ImageButton
        android:id="@+id/btnHappy"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnThinking"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/smiling_emoji_with_eyes_opened" />


    <ImageButton
        android:id="@+id/btnAngry"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnHappy"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/angry_emoji" />


    <ImageButton
        android:id="@+id/btnThinking"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_above="@+id/btnSleepy"
        android:layout_alignStart="@+id/btnSleepy"
        android:layout_marginBottom="18dp"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/thinking_face_emoji" />


    <ImageButton
        android:id="@+id/btnBroken"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/astonished_face_emoji" />


    <ImageButton
        android:id="@+id/btnStressed"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/fearful_face_emoji" />


    <ImageButton
        android:id="@+id/btnSleepy"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_light"
        android:scaleType="fitXY"
        android:src="@drawable/sleeping_emoji" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/elvProjectList"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvProjectChoice">


    </ExpandableListView>

    <Button
        android:id="@+id/btnAddProject"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/addProj"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/tvProjectChoice"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnRemoveProject"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/btnAddProject"
        android:layout_alignParentEnd="true"
        android:text="@string/remProj"
        android:textAllCaps="false"
        android:textSize="14sp" />


</RelativeLayout>
